[package]
name = "logseq2obsdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
itertools = "0.10.5"
parse-display = "0.6.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["indexmap"] }
strum = { version = "0.24.1", features = ["derive"] }
